# email-newsletter

./: .env  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-19fe63785171fcc4526dfc1ce67d41ae37478741d6edf9d8c646282ed59bf4b9.json  query-7053af0fb6ddf47742ffa9a8e0d64e6bf46a941128fda573a6e80cb3318ae1b7.json  query-7dcf9727b8aa0fe38588e0366ff9697326211b11923c403618bdf15d98aae00e.json  query-83859141a822c006489f4773229a12fa7d3bea60a45f7ec64f58fbb5bed8dd12.json  query-b4f823e0e9a5681b479f14e0c892863747d8d21e809ebb8134e124666f2c4f98.json  query-c252d6bbcd9f34dc60c1250bba4603efd3dfec7e1275c82317657d9ec93a8e52.json  query-f7e937e827168bddc7f0da8f89cc9101fdda07bf599547637a6891ce727d4eeb.json
configuration/: production.yaml
migrations/: 20250106003143_add_status_to_subscriptions.sql  20250106003642_create_subscription_tokens_table.sql  20250122234516_seed_user.sql  20250128234653_create_idempotency_table.sql  20250131232449_create_newsletter_issues_table.sql  20250131233053_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
