[package]
name = "email-newsletter"
version = "0.1.0"
authors = ["Yousef Farge <yousef.farge@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
reqwest = "0.12.9"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4"] }
