[package]
name = "email-newsletter"
version = "0.1.0"
authors = ["Yousef Farge <yousef.farge@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.95"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
claims = "0.8.0"
config = "0.14.1"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.11"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-actix-web = "0.7.15"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
validator = "0.19.0"

[dev-dependencies]
linkify = "0.10.0"
serde_json = "1.0.134"
wiremock = "0.6.2"
